--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -64,6 +64,7 @@
 	<string name="apn_name">"Nom:"</string>
     <string name="apn_user">"Nom d\'utilisateur"</string>
 	<string name="application_info_label">"Informations sur l\'application"</string>
+	<string name="master_clear_progress_text">"Veuillez patienter…"</string>
 	<string name="version_text">"version %1$s"</string>
 	<string name="device_feedback">Envoyer commentaires</string>
 	<string name="phone_language">"Langue"</string>
@@ -71,7 +72,7 @@
 	<string name="search_menu">"Rechercher"</string>
 
 
-	<string name="bt_message_your_turn">Action du joueur&#8230;</string>
-	<string name="bt_message_opponents_turn">Votre action&#8230;</string>
+	<string name="bt_message_your_turn">Action du joueur…</string>
+	<string name="bt_message_opponents_turn">Votre action…</string>
 	
 </resources>
