--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -64,6 +64,7 @@
 	<string name="apn_name">"Nome:"</string>
     <string name="apn_user">"Nome utente"</string>
 	<string name="application_info_label">"Informazioni applicazione"</string>
+	<string name="master_clear_progress_text">"Attendere prego…"</string>
 	<string name="version_text">"versione %1$s"</string>
 	<string name="device_feedback">Invia feedback</string>
 	<string name="phone_language">"Lingua"</string>
@@ -71,7 +72,7 @@
 	<string name="search_menu">"Cerca"</string>
 
 
-	<string name="bt_message_your_turn">Your move, put a dot&#8230;</string>
-	<string name="bt_message_opponents_turn">Opponent\'s move, wait&#8230;</string>
+	<string name="bt_message_your_turn">Your move, put a dot…</string>
+	<string name="bt_message_opponents_turn">Opponent\'s move, wait…</string>
 	
 </resources>
