--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,7 +117,8 @@
 
     <!-- 4314 ActionBar action to share the current selection [CHAR LIMIT=10] -->
     <string name="share">Share</string>
-
+    <!-- 5422 Toast message when there is no network connection to start VPN. [CHAR LIMIT=100] -->
+    <string name="vpn_no_network">There is no network connection. Please try again later.</string>
     <!-- 5597 Text used as a search hint into the search box -->
     <string name="search_menu">Search</string>
 
