--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -1,4 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ MIT License
+  ~
+  ~ Copyright (c) 2017 klnvch
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
+
 <resources xmlns:xliff="http://schemas.android.com/apk/res/android">
     <string name="app_name">اتصال پنج نقطه</string>
     <string name="language">فارسی</string>
@@ -45,12 +68,16 @@
     <string name="two_players">دو نفر</string>
     <string name="menu_local_network">شبکه ی محلی</string>
 
+    <string name="vibration">لرزش</string>
     <string name="rate_this_app">امتیاز بدهید به بازی</string>
 
     <string name="yes">"بله"</string>
     <string name="no">"خیر"</string>
     <string name="create">"ایجاد"</string>
     <string name="device_info_default">"ناشناس"</string>
+
+    <string name="switch_on_text">"روشن"</string>
+    <string name="switch_off_text">"خاموش"</string>
 
     <string name="bluetooth_not_discoverable">"دستگاه قابل شناسایی شود"</string>
     <string name="bluetooth_is_discoverable">"قابل مشاهده برای تمام دستگاه‌های بلوتوث اطراف (<xliff:g id="DISCOVERABLE_TIME_PERIOD">%1$s</xliff:g>)"</string>
