--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,4 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?><!--
+  ~ MIT License
+  ~
+  ~ Copyright (c) 2017 klnvch
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
+
 <resources>
     <string name="app_name">З’єднай П’ять Точок</string>
     <string name="language">Українська</string>
@@ -34,12 +57,16 @@
     <string name="two_players">Два гравці</string>
     <string name="menu_local_network">Локальна Мережа</string>
 
+    <string name="vibration">Вібросигнал</string>
     <string name="rate_this_app">Оцінити цю програму</string>
 
     <string name="yes">"Так"</string>
     <string name="no">"Ні"</string>
     <string name="create">"Створити"</string>
     <string name="device_info_default">"Невідомо"</string>
+
+    <string name="switch_on_text">"Увімкнено"</string>
+    <string name="switch_off_text">"Вимкнено"</string>
 
     <string name="bluetooth_not_discoverable">"Зробити пристрій видимим"</string>
     <string name="bluetooth_is_discoverable">"Видимий для всіх пристроїв Bluetooth неподалік (%1$s)"</string>
