--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -57,7 +57,8 @@
     <string name="two_players">Два гульца</string>
     <string name="menu_local_network">Лакальная Сетка</string>
 
-    <string name="vibration">Вібрацыя</string>
+    <string name="settings_vibration">Вібрацыя</string>
+    <string name="settings_night_mode">Начны рэжым</string>
     <string name="rate_this_app">Ацаніць гэтую праграму</string>
 
     <string name="yes">"Так"</string>
