--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -59,6 +59,8 @@
 
     <string name="settings_vibration">Vibración</string>
     <string name="settings_night_mode">Modo nocturno</string>
+    <string name="settings_auto">"Automático"</string>
+    <string name="settings_system">"Sistema"</string>
     <string name="rate_this_app">Valorar esta aplicación</string>
 
     <string name="yes">"Sí"</string>
