--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -59,6 +59,8 @@
 
     <string name="settings_vibration">Вібросигнал</string>
     <string name="settings_night_mode">Нічний режим</string>
+    <string name="settings_auto">"Авто"</string>
+    <string name="settings_system">"Система"</string>
     <string name="rate_this_app">Оцінити цю програму</string>
 
     <string name="yes">"Так"</string>
