--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -61,6 +61,7 @@
     <string name="settings_night_mode">Nacht-Modus</string>
     <string name="settings_auto">"Automatisch"</string>
     <string name="settings_system">"System"</string>
+    <string name="settings_reset">"Alles löschen"</string>
     <string name="rate_this_app">App bewerten</string>
 
     <string name="yes">"Ja"</string>
