--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,6 +61,7 @@
     <string name="settings_night_mode">Ночной режим</string>
     <string name="settings_auto">"Автонастройка"</string>
     <string name="settings_system">"Система"</string>
+    <string name="settings_reset">"Стереть все"</string>
     <string name="rate_this_app">Оценить приложение</string>
 
     <string name="yes">"Да"</string>
