--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -61,6 +61,7 @@
     <string name="settings_night_mode">Начны рэжым</string>
     <string name="settings_auto">"Аўта"</string>
     <string name="settings_system">"Сістэма"</string>
+    <string name="settings_reset">"Выдаліць усе"</string>
     <string name="rate_this_app">Ацаніць гэтую праграму</string>
 
     <string name="yes">"Так"</string>
