--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -72,6 +72,7 @@
     <string name="settings_night_mode">حالت شب</string>
     <string name="settings_auto">"خودکار"</string>
     <string name="settings_system">"سیستم"</string>
+    <string name="settings_reset">"پاک کردن همه موارد"</string>
     <string name="rate_this_app">امتیاز بدهید به بازی</string>
 
     <string name="yes">"بله"</string>
